# phishHawk

./: .gitignore  LICENSE  README.md  config.example.yaml  main.py  pyproject.toml
docs/adr/: 001-byok-11m.md
src/phishhawk/enrichment/: __init__.py  abuseipdb_lookup.py  crtsh_lookup.py  dns_lookup.py  iterative_enricher.py  redirect_chain.py  urlscan_lookup.py  whois_lookup.py
src/phishhawk/output/: __init__.py  raw_output.py
src/phishhawk/parser/: __init__.py  eml_parser.py
